--- a/kortex_gazebo/package.xml
+++ b/kortex_gazebo/package.xml
@@ -23,6 +23,19 @@
   <run_depend>moveit_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
+  <!-- Added Dependencies -->
+  <run_depend>depht_image_proc</run_depend>
+  <run_depend>image_geometry</run_depend>
+  <run_depend>image_proc</run_depend>
+  <run_depend>image_transport</run_depend>
+  <run_depend>message_filters</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
+  <run_depend>opencv2</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <!-- End of Added Dependencies -->
   <export>
     <gazebo_ros gazebo_media_path="${prefix}"/>
     <architecture_independent />
